force-app/main/default/objects/Pipeline_Stat__c/Pipeline_Stat__c.object-meta.xml
<CustomObject>
    <label>Pipeline Stat</label>
    <nameField>
        <label>Pipeline Stat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>