force-app/main/default/objects/Pipeline_Stat__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>Existing Business or New Business or (future)</description>
    <label>Opportunity Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>