force-app/main/default/objects/Pipeline_Stat__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>QTD, R3, R12 or other</description>
    <label>Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>