force-app/main/default/objects/Pipeline_Stat__c/fields/Snapshot_On__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_On__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Snapshot On</label>
    <type>Date</type>
</CustomField>