force-app/main/default/objects/Pipeline_Stat__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Period__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Period__c</field>
        <operation>notContain</operation>
        <value>Invalid</value>
    </filters>
    <label>All</label>
</ListView>